Implemented C code, it isn't faster than CXX object-oriented code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,16 @@
 cmake_minimum_required(VERSION 3.28)
-project(math_712)
-
-add_subdirectory(eigen)#
-
-set(CMAKE_CXX_STANDARD 20)
+project(math_712 C)
 
 find_package(OpenMP)
 
-set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -Wuninitialized ${CMAKE_CXX_FLAGS}")
-set(CMAKE_C_FLAGS "-O3 -Wall -Wextra -Wuninitialized ${CMAKE_C_FLAGS}")
+set(CMAKE_C_FLAGS "-Ofast -Wall -Wextra -Wuninitialized -Rpass-analysis=loop-vectorize -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -march=native ${CMAKE_C_FLAGS}")
 
-add_executable(math_712_hw_2_part_1 hw2_part1.cpp)
-add_executable(math_712_hw_2_part_2 hw2_part2.cpp)
-add_executable(hw2 hw2.c)
+add_executable(hw2 hw2/hw2.c hw2/heat_equation_fwd.c csv_writer.c)
 
 if (${OpenMP_FOUND})
-    target_link_libraries(math_712_hw_2_part_1 OpenMP::OpenMP_CXX)
-    target_link_libraries(math_712_hw_2_part_2 OpenMP::OpenMP_CXX)
     target_link_libraries(hw2 m OpenMP::OpenMP_C)
+else ()
+    target_link_libraries(hw2 m)
 endif ()
 
 #target_link_libraries(math_712_hw_2_part_1 Eigen3::Eigen)
